add input field for name entry option

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <div class = "two"></div>
   <div class ="parent">
     <h1 class="headline">Leslie Knope compliment generator! </h1>
-    <p class="quoteDisplay">""</p>
+    <input type="text" id = "name" placeholder="Enter name here" class="new-name">
     <button class = "generate">Get a compliment!</button>
+    <p class="quoteDisplay">""</p>
   </div>
 </main>
 
