--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class= "one"></div>
   <div class = "two"></div>
   <div class ="parent">
-    <h1 class="headline">Leslie Knope compliment generator! </h1>
+    <h1 class="headline">Leslie Knope compliment generator</h1>
     <input type="text" id = "name" placeholder="Enter name here" class="new-name">
     <button class = "generate">Get a compliment!</button>
     <p class="quoteDisplay">""</p>
